# AutoCoder

./: .autocoderignore  .gitattributes  .gitignore  .p4ignore  AutoCoder.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_update_and_restart.bat
bigtest/: README.md  common.ps1  run_dx12.ps1  run_fixbug.ps1  run_smoke.ps1
bigtest/fixture_calc/: CMakeLists.txt
bigtest/fixture_calc/src/: calc.cpp  calc.h  main.cpp
cmake/: stamp_build_config.cmake.in
resources/: autocoder.qrc  autocoder.rc  gen_icon.py
src/: BuildConfig.h.in  build_date.cpp  build_date.h  main.cpp
src/agent/: AgentRunner.cpp  AgentRunner.h  Conversation.cpp  Conversation.h  RepoMap.cpp  RepoMap.h  SystemPrompt.cpp  SystemPrompt.h
src/cli/: cli_main.cpp
src/cli/tests/: Suites.h  TestHarness.h  test_autoverify.cpp  test_debugrunner.cpp  test_edit_tools.cpp  test_highlight.cpp  test_image.cpp  test_llm_body.cpp  test_llm_cache.cpp  test_main.cpp  test_markdown_pre.cpp  test_partial_reply.cpp  test_paths.cpp  test_policy.cpp  test_repomap.cpp  test_revert_e2e.cpp  test_shell.cpp  test_store.cpp  test_systemprompt.cpp
src/cli/tests/helpers/: crashprobe.cpp
src/diagnostics/: CrashHandler.cpp  CrashHandler.h  TraceTimer.cpp  TraceTimer.h
src/llm/: LlmClient.cpp  LlmClient.h
src/persistence/: ConversationStore.cpp  ConversationStore.h  SecretStore.cpp  SecretStore.h
src/tools/: AnalyzeImageTool.cpp  AnalyzeImageTool.h  AppendTool.cpp  AppendTool.h  AskUserTool.cpp  AskUserTool.h  BashTool.cpp  BashTool.h  CodeStructure.cpp  CodeStructure.h  CopyFileTool.cpp  CopyFileTool.h  EditTool.cpp  EditTool.h  FindCalleesTool.cpp  FindCalleesTool.h  FindCallersTool.cpp  FindCallersTool.h  GlobTool.cpp  GlobTool.h  GrepTool.cpp  GrepTool.h  IgnoreRules.cpp  IgnoreRules.h  LSTool.cpp  LSTool.h  MoveFuncTool.cpp  MoveFuncTool.h  MoveSpanTool.cpp  MoveSpanTool.h  PathUtil.cpp  PathUtil.h  ReadOutlineTool.cpp  ReadOutlineTool.h  ReadTool.cpp  ReadTool.h  ReplaceLinesTool.cpp  ReplaceLinesTool.h  Tool.h  ToolContext.h  (+4 more)
src/tools/shell/: CommandPolicy.cpp  CommandPolicy.h  DebugRunner.cpp  DebugRunner.h  InternalShell.cpp  InternalShell.h  ShellGrammar.h
src/ui/: AskUserWidget.cpp  AskUserWidget.h  ChatView.cpp  ChatView.h  CodeColorizer.cpp  CodeColorizer.h  CommandApprovalWidget.cpp  CommandApprovalWidget.h  ImagePreview.cpp  ImagePreview.h  InputBar.cpp  InputBar.h  MainWindow.cpp  MainWindow.h  MarkdownPreprocess.cpp  MarkdownPreprocess.h  MessageWidget.cpp  MessageWidget.h  SettingsDialog.cpp  SettingsDialog.h  ToolCallWidget.cpp  ToolCallWidget.h
